--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "bearlovescode/instances-social-client",
+    "name": "bearlovescode/instances-social",
     "type": "library",
     "autoload": {
         "psr-4": {
-            "Bearlovescode\\InstancesSocialClient\\": "src/"
+            "Bearlovescode\\InstancesSocial\\": "src/"
         }
     },
     "authors": [
@@ -22,5 +22,12 @@
         "illuminate/support": "^10.46",
         "guzzlehttp/guzzle": "^7.8",
         "bearlovescode/datamodels": "^1.1"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "\\Bearlovescode\\InstancesSocial\\Providers\\InstancesSocialApiServiceProvider"
+            ]
+        }
     }
 }
